# tmux-status-tracker

./: Cargo.toml  README.md
src/: main.rs
